tests/ui/attributes/crate-type-delimited.stderr
error[E0539]: malformed `crate_type` attribute input
  --> $DIR/crate-type-delimited.rs:2:1
   |
LL | #![crate_type(lib)]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/linkage.html>
help: must be of the form
   |
LL - #![crate_type(lib)]
LL + #![crate_type = "crate type"]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
